Edit build files

--- a/se.redfield.textprocessing/build.properties
+++ b/se.redfield.textprocessing/build.properties
@@ -3,7 +3,8 @@ bin.includes = plugin.xml,\
                META-INF/,\
                textprocessing.jar,\
                py/,\
-               config/
+               config/,\
+               resources/
 bin.excludes = py/.vscode/,\
                py/.gitignore,\
                py/testdata/,\
