--- a/plugin/.classpath
+++ b/plugin/.classpath
@@ -4,4 +4,6 @@
     <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
     <classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
     <classpathentry kind="output" path="bin"/>
+	<classpathentry exported="true" kind="lib" path="lib" sourcepath="lib"/>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
