--- a/plugin/build.properties
+++ b/plugin/build.properties
@@ -1,10 +1,12 @@
-source.textprocessing.jar = src/
+source.. = src/
+output.. = target/classes/
 bin.includes = plugin.xml,\
                META-INF/,\
-               textprocessing.jar,\
+               .,\
                py/,\
                config/,\
-               resources/
+               resources/,\
+			   lib/
 bin.excludes = py/.vscode/,\
                py/.gitignore,\
                py/testdata/,\
