--- a/plugin/plugin.xml
+++ b/plugin/plugin.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.0"?>
 <plugin>
-   
+	<!-- Activator -->
+	<extension point="org.eclipse.ui.startup">
+		<startup class="se.redfield.textprocessing.SpacyPlugin"/>
+	</extension>
+	
    <extension
          point="org.knime.workbench.repository.nodes">   
       <node
