Update build files

--- a/plugin/build.properties
+++ b/plugin/build.properties
@@ -5,8 +5,7 @@ bin.includes = plugin.xml,\
                .,\
                py/,\
                config/,\
-               resources/,\
-			   lib/
+               resources/
 bin.excludes = py/.vscode/,\
                py/.gitignore,\
                py/testdata/,\
