Rename ftp user, fix some typos

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,11 +39,11 @@ jobs:
           ./upload-update-site.sh $SFTP_USER $SFTP_PASSWORD $label
         env:
           SFTP_PASSWORD: ${{ secrets.SFTP_PASSWORD }}
-          SFTP_USER: redfield-text-processing
+          SFTP_USER: redfield-nlp-nodes
 
       - name: Upload Docs
         # https://stackoverflow.com/questions/58139406/only-run-job-on-specific-branch-with-github-actions
         if: github.ref == 'refs/heads/release/4.3'
-        run: ./update-product.sh https://nodepit.com/api/product/redfield-text-processing $PRODUCT_EDIT_TOKEN PRODUCT.md CHANGELOG.md
+        run: ./update-product.sh https://nodepit.com/api/product/redfield-nlp-nodes $PRODUCT_EDIT_TOKEN PRODUCT.md CHANGELOG.md
         env:
           PRODUCT_EDIT_TOKEN: ${{ secrets.PRODUCT_EDIT_TOKEN }}
