--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -10,7 +10,7 @@
 	<parent>
 		<groupId>se.redfield.textprocessing</groupId>
 		<artifactId>se.redfield.textprocessing</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>${revision}</version>
 	</parent>
 
 	<dependencies>
