--- a/targetplatform/pom.xml
+++ b/targetplatform/pom.xml
@@ -12,7 +12,7 @@
 	<parent>
 		<groupId>se.redfield.textprocessing</groupId>
 		<artifactId>se.redfield.textprocessing</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>${revision}</version>
 	</parent>
 
 </project>
