Edit node descriptions and category

--- a/plugin/plugin.xml
+++ b/plugin/plugin.xml
@@ -9,35 +9,35 @@
    <extension
          point="org.knime.workbench.repository.nodes">   
       <node
-            category-path="/community/redfield-textprocessing"
+            category-path="/redfield-textprocessing"
             factory-class="se.redfield.textprocessing.nodes.tokenizer.SpacyTokenizerNodeFactory">
       </node>
       <node
-            category-path="/community/redfield-textprocessing"
+            category-path="/redfield-textprocessing"
             factory-class="se.redfield.textprocessing.nodes.ner.SpacyNerTaggerNodeFactory">
       </node>
       <node
-            category-path="/community/redfield-textprocessing"
+            category-path="/redfield-textprocessing"
             factory-class="se.redfield.textprocessing.nodes.lemmatizer.SpacyLemmatizerNodeFactory">
       </node>
       <node
-            category-path="/community/redfield-textprocessing"
+            category-path="/redfield-textprocessing"
             factory-class="se.redfield.textprocessing.nodes.pos.SpacyPosTaggerNodeFactory">
       </node>
       <node
-            category-path="/community/redfield-textprocessing"
+            category-path="/redfield-textprocessing"
             factory-class="se.redfield.textprocessing.nodes.morph.SpacyMorphologizerNodeFactory">
       </node>
       <node
-            category-path="/community/redfield-textprocessing"
+            category-path="/redfield-textprocessing"
             factory-class="se.redfield.textprocessing.nodes.vectorizer.SpacyVectorizerNodeFactory">
       </node>
       <node
-            category-path="/community/redfield-textprocessing"
+            category-path="/redfield-textprocessing"
             factory-class="se.redfield.textprocessing.bert.nodes.classifier.BertClassifierNodeFactory">
       </node>
       <node
-            category-path="/community/redfield-textprocessing"
+            category-path="/redfield-textprocessing"
             factory-class="se.redfield.textprocessing.bert.nodes.embedder.BertEmbedderNodeFactory">
       </node>    
    </extension>
@@ -53,7 +53,7 @@
                icon="resources/redfield_logo.png"
                level-id="redfield-textprocessing"
                name="Redfield NLP Nodes"
-               path="/community">
+               path="/">
          </category>
       </extension>
       <extension
