Unpack spacy plugin on installation
Necessary to avoid problems with the caching of the Python source files
when the extension is updated.

--- a/se.redfield.textprocessing/build.properties
+++ b/se.redfield.textprocessing/build.properties
@@ -1,8 +1,8 @@
-source.. = src/
-output.. = target/classes/
+source.spacy.jar = src/
+output.spacy.jar = target/classes/
 bin.includes = plugin.xml,\
                META-INF/,\
-               .,\
+               spacy.jar,\
                py/,\
                config/,\
                resources/
