Move preference page under the KNIME category
This is akin to other community extensions.

--- a/se.redfield.textprocessing/plugin.xml
+++ b/se.redfield.textprocessing/plugin.xml
@@ -58,6 +58,7 @@
       <extension
             point="org.eclipse.ui.preferencePages">
          <page
+               category="org.knime.workbench.ui.preferences"
                class="se.redfield.textprocessing.prefs.SpacyPreferencePage"
                id="se.redfield.textprocessing.prefs.SpacyPreferencePage"
                name="Redfield NLP Nodes">
