--- a/knime.yml
+++ b/knime.yml
@@ -7,7 +7,7 @@ description: "Redfield NLP Nodes"
 env_yml_path: se.redfield.textprocessing/config/spacy_cpu.yml
 version: 1.0.1
 copyright: "Copyright (c) 2021 Redfield AB"
-# TODO license
+license_file: LICENSE.txt
 java_bundles:
   - se.redfield.textprocessing
 feature_dependencies:
