--- a/se.redfield.textprocessing/config/spacy_cpu.yml
+++ b/se.redfield.textprocessing/config/spacy_cpu.yml
@@ -4,10 +4,11 @@ channels:                # Repositories to search for packages
 dependencies:            # List of packages that should be installed
 - python=3.9             # Python
 - py4j                   # used for KNIME <-> Python communication
-- nomkl                  # Prevents the use of Intel's MKL !!! Can't install pytorch with conda if nomkl is present !!! MKL doesn't work at all on Mac M1
+- nomkl                  # Prevents the use of Intel's MKL
 - pandas                 # Table data structures
 - numpy                  # N-dimensional arrays
-- pyarrow<8.0                # Arrow serialization
+- pyarrow<8.0            # Arrow serialization
+- tokenizers=0.12.1      # Needed by spacy
 - pip
 - pip:
   - torch==1.12.1               # needed by spacy-transformers
