Properly deprecate nodes without model ports
This allows to load old workflows using the extension.

--- a/se.redfield.textprocessing/build.properties
+++ b/se.redfield.textprocessing/build.properties
@@ -1,4 +1,5 @@
-source.spacy.jar = src/
+source.spacy.jar = src/,\
+                   src-deprecated/
 output.spacy.jar = target/classes/
 bin.includes = plugin.xml,\
                META-INF/,\
