Use the old feature name to enable an update from the previous version

--- a/knime.yml
+++ b/knime.yml
@@ -22,3 +22,4 @@ java_bundles:
 feature_dependencies:
   - org.knime.features.ext.textprocessing
   - org.knime.features.python2
+feature_name: se.redfield.textprocessing.feature
