--- a/se.redfield.textprocessing/plugin.xml
+++ b/se.redfield.textprocessing/plugin.xml
@@ -64,6 +64,12 @@
       <node
             category-path="/community/redfield-textprocessing"
             factory-class="se.redfield.textprocessing.nodes.selector.SpacyModelSelectorNodeFactory">
+      </node>
+      <node
+            category-path="/community/redfield-textprocessing"
+            deprecated="false"
+            factory-class="se.redfield.textprocessing.nodes.stopword.SpacyStopWordFilterNodeFactory"
+            hidden="false">
       </node>    
    </extension>
 	<extension
