Add pymorphy2 dependency

--- a/se.redfield.textprocessing/config/spacy_osx_cpu.yml
+++ b/se.redfield.textprocessing/config/spacy_osx_cpu.yml
@@ -14,6 +14,7 @@ dependencies:            # List of packages that should be installed
 - spacy-transformers=1.1.8
 - pip
 - pip:
+  - pymorphy2              # Needed by russian models
   - pymorphy3              # Needed by russian models
   - pymorphy3-dicts-uk     # Needed by ukrainian models
   - sudachipy              # Needed by japanese models
