--- a/se.redfield.textprocessing/config/spacy_linux_cpu.yml
+++ b/se.redfield.textprocessing/config/spacy_linux_cpu.yml
@@ -15,6 +15,7 @@ dependencies:            # List of packages that should be installed
   - torch==1.12.1               # needed by spacy-transformers
   - spacy==3.5.3
   - spacy-transformers==1.1.7   # needed for models using transformers
+  - pymorphy2              # Needed by russian models
   - pymorphy3              # Needed by russian models
   - pymorphy3-dicts-uk     # Needed by ukrainian models
   - sudachipy              # Needed by japanese models
