--- a/pixi.toml
+++ b/pixi.toml
@@ -2,7 +2,7 @@
 authors = ["AbderrahimAl <abderrahimalakouche@gmail.com>"]
 channels = ["knime/label/githubTest", "knime", "conda-forge"]
 name = "py39_bert_cpu"
-platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]
+platforms = ["win-64", "linux-64", "osx-64"]
 version = "0.1.0"
 
 [tasks]
@@ -15,7 +15,7 @@ pandas = "*"
 numpy = "*"
 pyarrow = "<8.0"
 tokenizers = "0.12.1.*"      # Needed by spacy
-spacy-pkuseg = "1.0.1.*"     # Needed by chinese models
+spacy-pkuseg = "<0.1.0.*"     # Needed by chinese models
 spacy = "3.5.3.*"
 pytorch = "1.12.1.*"
 spacy-transformers = "1.1.8.*"
