--- a/pixi.toml
+++ b/pixi.toml
@@ -14,11 +14,11 @@ nomkl = "*"
 pandas = "*"
 numpy = "*"
 pyarrow = "<8.0"
-tokenizers = "0.12.1.*"      # Needed by spacy
-spacy-pkuseg = "<0.1.0.*"     # Needed by chinese models
-spacy = "3.5.3.*"
-pytorch = "1.12.1.*"
-spacy-transformers = "1.1.8.*"
+tokenizers = "==0.12.1"      # Needed by spacy
+spacy-pkuseg = "<0.1.0"     # Needed by chinese models
+spacy = "==3.5.3"
+pytorch = "==1.12.1"
+spacy-transformers = "==1.1.8"
 pymorphy2 = "*"
 pymorphy3-dicts-uk = "*"
 sudachipy = "*"
