--- a/pixi.toml
+++ b/pixi.toml
@@ -19,7 +19,7 @@ spacy-pkuseg = "<0.1.0"
 # -------------------------------
 # Win64 and Linux64: pip-based torch + spacy
 # -------------------------------
-[target.win-64.pip-dependencies]
+[target.win-64.pypi-dependencies]
 torch = "==1.12.1"
 spacy = "==3.5.3"
 spacy-transformers = "==1.1.7"
@@ -29,7 +29,7 @@ pymorphy3-dicts-uk = "*"
 sudachipy = "*"
 sudachidict-core = "*"
 
-[target.linux-64.pip-dependencies]
+[target.linux-64.pypi-dependencies]
 torch = "==1.12.1"
 spacy = "==3.5.3"
 spacy-transformers = "==1.1.7"
@@ -47,7 +47,7 @@ spacy = "3.5.3"
 pytorch = "1.12.1"
 spacy-transformers = "1.1.8"
 
-[target.osx-64.pip-dependencies]
+[target.osx-64.pypi-dependencies]
 pymorphy2 = "*"
 pymorphy3 = "*"
 pymorphy3-dicts-uk = "*"
