Added Commons IO dependency

--- a/se.redfield.textprocessing/build.properties
+++ b/se.redfield.textprocessing/build.properties
@@ -1,5 +1,4 @@
-source.spacy.jar = src/,\
-                   src-deprecated/
+source.spacy.jar = src/
 output.spacy.jar = target/classes/
 bin.includes = plugin.xml,\
                META-INF/,\
